syntax = "proto3";

package colav;

message MissionRequest {
    string tag = 1;
    string timestamp = 2;

    message Point {
        float x = 1;
        float y = 2;
        float z = 3;
    }
    message Vessel {
        string tag = 1;
        enum VesselType {
            UNSPECIFIED = 0;
            HYDROFOIL = 1;
            OTHER = 2;
        }
        VesselType type = 2;
        message VesselConstraints {
            float max_acceleration = 3;
            float max_deceleration = 4;
            float max_velocity = 5;
            float min_velocity = 6;
            float max_yaw_rate = 7;
        }
        VesselConstraints constraints = 3;
        message VesselGeometry {
            float loa = 1;
            float beam = 2;
            float safety_radius = 3;
        }
        VesselGeometry geometry = 4;
    }
    Vessel vessel = 3;
    Point init_position = 4;
    message GoalWaypoint {
        Point position = 1;
        float safety_radius = 2;
    }
    GoalWaypoint goal_position = 5;
}
